[package]
name = "proxybroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.3.0"
tokio = { version = "1", features = ["full"] }
# https://stackoverflow.com/questions/65053259/reqwest-segmentation-fault-from-aws-lambda-with-rust
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
maxminddb = "0.21.0"